Date Filter added in user page

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
         "@reduxjs/toolkit": "^1.6.1",
         "@stripe/react-stripe-js": "^1.4.1",
         "@stripe/stripe-js": "^1.15.0",
+        "@syncfusion/ej2": "^19.4.43",
+        "@syncfusion/ej2-calendars": "^19.4.42",
+        "@syncfusion/ej2-react-calendars": "^19.4.42",
         "@tanem/svg-injector": "8.0.50",
         "antd": "^4.17.3",
         "apexcharts": "^3.27.3",
