--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         "react-charts": "^2.0.0-beta.7",
         "react-countup": "^4.3.3",
         "react-data-table-component": "^6.11.7",
-        "react-datepicker": "2.16.0",
+        "react-datepicker": "^2.16.0",
         "react-dom": "16.12.0",
         "react-draggable": "4.4.2",
         "react-geocode": "^0.2.3",
