--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^30.0.0",
         "@ckeditor/ckeditor5-react": "^3.0.2",
-        "@date-io/date-fns": "2.6.1",
+        "@date-io/date-fns": "^2.6.1",
+        "@emotion/react": "^11.7.1",
         "@formatjs/intl-pluralrules": "1.3.5",
         "@fortawesome/fontawesome-free": "5.13.0",
         "@manaflair/redux-batch": "1.0.0",
         "@material-ui/core": "4.9.14",
         "@material-ui/icons": "4.9.1",
         "@material-ui/lab": "4.0.0-alpha.53",
-        "@material-ui/pickers": "3.2.10",
+        "@material-ui/pickers": "^3.3.10",
         "@material-ui/styles": "4.9.14",
+        "@mui/lab": "^5.0.0-alpha.65",
+        "@mui/material": "^5.3.0",
         "@reach/combobox": "^0.16.5",
         "@react-google-maps/api": "^2.7.0",
         "@reduxjs/toolkit": "^1.6.1",
@@ -73,6 +76,7 @@
         "object-path": "^0.11.5",
         "perfect-scrollbar": "1.5.0",
         "prop-types": "15.7.2",
+        "rc-time-picker": "^3.7.3",
         "react": "16.12.0",
         "react-bootstrap": "1.0.1",
         "react-bootstrap-table-next": "4.0.2",
@@ -80,7 +84,7 @@
         "react-charts": "^2.0.0-beta.7",
         "react-countup": "^4.3.3",
         "react-data-table-component": "^6.11.7",
-        "react-datepicker": "2.16.0",
+        "react-datepicker": "^2.16.0",
         "react-dom": "16.12.0",
         "react-draggable": "4.4.2",
         "react-geocode": "^0.2.3",
