add S3backet for image

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
         "@tanem/svg-injector": "8.0.50",
         "antd": "^4.17.3",
         "apexcharts": "^3.27.3",
+        "aws-s3": "^2.0.5",
+        "aws-sdk": "^2.784.0",
         "axios": "^0.21.1",
         "axios-mock-adapter": "1.18.1",
         "bootstrap": "4.5.0",
@@ -78,6 +80,7 @@
         "prop-types": "15.7.2",
         "rc-time-picker": "^3.7.3",
         "react": "16.12.0",
+        "react-aws-s3": "^1.5.0",
         "react-bootstrap": "1.0.1",
         "react-bootstrap-table-next": "4.0.2",
         "react-bootstrap-table2-paginator": "2.1.2",
