--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
         "react-syntax-highlighter": "12.2.1",
         "react-table": "^7.6.1",
         "react-toastify": "^8.0.2",
+        "react-multi-carousel": "^2.6.5",
         "react-window": "1.8.5",
         "redux": "4.0.5",
         "redux-persist": "6.0.0",
