--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
         "react-swipeable-views": "0.13.9",
         "react-syntax-highlighter": "12.2.1",
         "react-table": "^7.6.1",
+        "react-to-print": "^2.14.4",
         "react-toastify": "^8.0.2",
         "react-window": "1.8.5",
         "redux": "4.0.5",
