--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "react-bootstrap-table-next": "4.0.2",
         "react-bootstrap-table2-paginator": "2.1.2",
         "react-charts": "^2.0.0-beta.7",
+        "copy-to-clipboard": "^3.3.1",
         "react-countup": "^4.3.3",
         "react-data-table-component": "^6.11.7",
         "react-datepicker": "^2.16.0",
