--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
         "object-path": "^0.11.5",
         "perfect-scrollbar": "1.5.0",
         "prop-types": "15.7.2",
+        "file-saver": "^2.0.5",
+        "xlsx": "^0.16.9",
         "rc-time-picker": "^3.7.3",
         "react": "16.12.0",
         "react-aws-s3": "^1.5.0",
