--- a/package.json
+++ b/package.json
@@ -63,15 +63,18 @@
         "bootstrap": "4.5.0",
         "clipboard-copy": "3.1.0",
         "clsx": "1.1.0",
+        "copy-to-clipboard": "^3.3.1",
         "cp-cli": "2.0.0",
         "css-mediaquery": "0.1.2",
         "date-fns": "2.8.1",
         "dotenv": "^14.3.0",
         "downshift": "3.4.2",
         "fg-loadcss": "2.1.0",
+        "file-saver": "^2.0.5",
         "formik": "2.1.4",
         "json2mq": "0.2.0",
         "jss-rtl": "^0.3.0",
+        "jszip": "^3.7.1",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "1.4.1",
         "moment": "^2.29.1",
@@ -79,8 +82,6 @@
         "object-path": "^0.11.5",
         "perfect-scrollbar": "1.5.0",
         "prop-types": "15.7.2",
-        "file-saver": "^2.0.5",
-        "xlsx": "^0.16.9",
         "rc-time-picker": "^3.7.3",
         "react": "16.12.0",
         "react-aws-s3": "^1.5.0",
@@ -88,7 +89,6 @@
         "react-bootstrap-table-next": "4.0.2",
         "react-bootstrap-table2-paginator": "2.1.2",
         "react-charts": "^2.0.0-beta.7",
-        "copy-to-clipboard": "^3.3.1",
         "react-countup": "^4.3.3",
         "react-data-table-component": "^6.11.7",
         "react-datepicker": "^2.16.0",
@@ -128,6 +128,7 @@
         "styled-components": "^5.2.3",
         "sweetalert2": "^10.16.9",
         "use-places-autocomplete": "^1.11.0",
+        "xlsx": "^0.16.9",
         "yup": "0.29.0"
     },
     "devDependencies": {
