--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "fg-loadcss": "2.1.0",
         "file-saver": "^2.0.5",
         "formik": "2.1.4",
+        "immer": "^9.0.12",
         "json2mq": "0.2.0",
         "jss-rtl": "^0.3.0",
         "jszip": "^3.7.1",
